[package]
name = "openstack-keystone-k8s-auth-raft"
description = "OpenStack Keystone Raft driver for the K8s auth provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
#base64.workspace = true
#chrono.workspace = true
#derive_builder.workspace = true
#eyre.workspace = true
#inventory.workspace = true
#openstack-keystone-api-types = { version = "0.1", features = ["openapi", "validate", "conv"], path = "../api-types/" }
openstack-keystone-core = { version = "0.1", path = "../core", features = ["api"] }
openstack-keystone-core-types = { version = "0.1", path = "../core-types/" }
openstack-keystone-distributed-storage = { version = "0.1", path = "../storage/"}
#serde.workspace = true
#serde_json.workspace = true
#thiserror.workspace = true
#tokio = { workspace = true, features = ["macros", "signal"] }
#tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
#utoipa.workspace = true
#utoipa-axum.workspace = true
#uuid = { workspace = true, features = ["v4"] }
#validator.workspace = true

[dev-dependencies]

[lints]
workspace = true
