[package]
name = "openstack-keystone-key-repository"
description = "OpenStack Keystone shared Fernet key repository (filesystem, Vault-ready)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["now"] }
fernet = { workspace = true, features = ["rustcrypto"] }
jsonwebtoken.workspace = true
nix = { workspace = true, features = ["fs", "user"] }
notify = "8.2"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
pem = "3"
pkcs8 = { version = "0.11", features = ["pem"] }
rand_core = { version = "0.6", features = ["std"] }
rsa = "0.9"
scopeguard.workspace = true
secrecy.workspace = true
sha1.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
