[package]
name = "openstack-keystone"
description = "OpenStack Keystone service"
version = "0.1.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

#[package.metadata.clippy]
#warn = ["clippy::unused_results"]

[[bin]]
name="keystone"
path="src/bin/keystone.rs"

[[bin]]
name="keystone-db"
path="src/bin/keystone_db.rs"

[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["http1", "http2", "macros", "matched-path", "original-uri", "query", "tokio", "tracing"] }
base64.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
derive_builder.workspace = true
eyre.workspace = true
openstack-keystone-api-types = { version = "0.1", features = ["openapi", "validate"], path = "../api-types/"}
openstack-keystone-appcred-sql = { version = "0.1", path = "../appcred-sql/" }
openstack-keystone-assignment-sql = { version = "0.1", path = "../assignment-sql/" }
openstack-keystone-catalog-sql = { version = "0.1", path = "../catalog-sql/" }
openstack-keystone-config = { version = "0.1", path = "../config" }
openstack-keystone-core = { version = "0.1", features = ["api"], path = "../core" }
openstack-keystone-distributed-storage = { version = "0.1", path = "../storage/"}
openstack-keystone-federation-sql = { version = "0.1", path = "../federation-sql" }
openstack-keystone-k8s-auth-sql = { version = "0.1", path = "../k8s-auth-sql/" }
openstack-keystone-identity-sql = { version = "0.1", path = "../identity-sql" }
openstack-keystone-idmapping-sql = { version = "0.1", path = "../idmapping-sql" }
openstack-keystone-resource-sql = { version = "0.1", path = "../resource-sql/" }
openstack-keystone-revoke-sql = { version = "0.1", path = "../revoke-sql/" }
openstack-keystone-role-sql = { version = "0.1", path = "../role-sql/" }
openstack-keystone-token-fernet = { version = "0.1", path = "../token-fernet/" }
openstack-keystone-token-restriction-sql = { version = "0.1", path = "../token-restriction-sql/" }
openstack-keystone-trust-sql = { version = "0.1", path = "../trust-sql/" }
openstack-keystone-webauthn = { version = "0.1", path = "../webauthn/"}
openidconnect.workspace = true
reqwest = { workspace = true, features = ["json", "http2", "gzip", "deflate"] }
sea-orm = { workspace = true, features = ["debug-print", "sqlx-mysql", "sqlx-postgres", "runtime-tokio", "runtime-tokio-native-tls"] }
sea-orm-migration = { workspace = true, features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "signal", "rt-multi-thread"] }
tokio-util.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["compression-full", "request-id", "sensitive-headers", "trace", "util"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url = { workspace = true, features = ["serde"] }
utoipa = { workspace = true, features = ["axum_extras", "yaml"] }
utoipa-axum.workspace = true
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }
uuid = { workspace = true, features = ["v4"] }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
http-body-util.workspace = true
openstack-keystone-core = { version = "0.1", path = "../core", features = ["mock"] }
rstest.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
url.workspace = true

[features]
default = []
