[package]
name = "openstack_keystone_api_types"
description = "OpenStack Keystone API types"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
derive_builder.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa = { workspace = true, features = ["chrono"] }
validator = { workspace = true, features = ["derive"] }
webauthn-rs-proto.workspace = true

[dev-dependencies]
