[package]
name = "openstack_keystone_distributed_storage"
description = "Keystone distributed storage based on the `openraft` and `fjall` database."
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
openraft = { workspace = true, features = ["serde", "type-alias"] }
byteorder.workspace = true
fjall = { version = "3.0" }
futures.workspace = true
prost.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[dev-dependencies]
eyre.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
tonic-prost-build.workspace = true
