[package]
name = "openstack-keystone-mapping-driver-raft"
description = "OpenStack Keystone Raft driver for the mapping provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
eyre.workspace = true
inventory.workspace = true
openstack-keystone-core.workspace = true
openstack-keystone-core-types.workspace = true
openstack-keystone-distributed-storage.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
openstack-keystone-core-types = { workspace = true, features = ["mock"] }
openstack-keystone-distributed-storage = { workspace = true, features = ["mock"] }
rmp-serde.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true