[package]
name = "openstack-keystone-oauth2-key-driver-raft"
description = "OpenStack Keystone Raft driver for OAuth2 per-domain signing keys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
openstack-keystone-core.workspace = true
openstack-keystone-core-types.workspace = true
openstack-keystone-distributed-storage.workspace = true
openstack-keystone-key-repository.workspace = true
openstack-keystone-local-emergency-store.workspace = true
rmp-serde.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
openstack-keystone-audit = { workspace = true, features = ["testing"] }
openstack-keystone-config.workspace = true
openstack-keystone-core = { workspace = true, features = ["mock"] }
openstack-keystone-distributed-storage = { workspace = true, features = ["mock"] }
sea-orm.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
