[package]
name = "openstack-keystone-storage-api"
description = "Keystone storage API trait and lightweight types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
rmp-serde = "1.3"
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
